--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,27 @@
             <version>3.12.0</version>
         </dependency>
     </dependencies>
-
+    <profiles>
+        <!--这是开发环境-->
+        <profile>
+            <id>dev</id>
+            <properties>
+                <!-- 环境标识，需要与配置文件的名称相对应 -->
+                <activatedEnv>dev</activatedEnv>
+            </properties>
+            <activation>
+                <!-- 默认环境 -->
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+        <!--这是生产环境-->
+        <profile>
+            <id>prod</id>
+            <properties>
+                <activatedEnv>prod</activatedEnv>
+            </properties>
+        </profile>
+    </profiles>
     <build>
         <plugins>
             <plugin>
