--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,29 +1,3 @@
-server:
-  port: 9090
-  servlet:
-    context-path: /workflow
-    session:
-      cookie:
-        path: /
 spring:
-  datasource:
-    druid:
-      driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql:///activiti?nullCatalogMeansCurrent=true&useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8&allowMultiQueries=true
-      username: root
-      password: root
-  activiti:
-    database-schema-update: true
-    db-history-used: true
-    history-level: full
-    check-process-definitions: false
-    deployment-mode: never-fail
-
-logging:
-  level:
-    org.activiti.engine.impl.persistence.entity: debug
-    com.fosu.workflow.mapper: debug
-
-mybatis-plus:
-  type-aliases-package: com.fosu.workflow.entities
-  mapper-locations: classpath*:org/fosu/workflow/mapper/**/*.xml
+  profiles:
+    active: @activatedEnv@
