--- a/activiti-web/.env.development
+++ b/activiti-web/.env.development
@@ -5,7 +5,7 @@ ENV = 'development'
 VUE_APP_BASE_API = '/dev-api'
 
 # 后台项目url
-VUE_APP_BASE_URL = 'http://localhost:9090/workflow'
+VUE_APP_BASE_URL = 'http://4.194.16.157:9090/workflow'
 
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
 # to control whether the babel-plugin-dynamic-import-node plugin is enabled.
